tui/src/snapshots/codex_tui__app_server_render__tests__prompt_footer_includes_branch_and_working_dir.snap
---
source: tui/src/app_server_render.rs
expression: "render_prompt_footer_line_for_branch(Some(\"main\"))"
---
  ctrl+g editor · main ❯ project
