tui/src/snapshots/codex_tui__app_server_render__tests__prompt_footer_includes_yolo_indicator.snap
---
source: tui/src/app_server_render.rs
expression: "render_prompt_footer_line(None, Some(\"main\"), true)"
---
  ▲YOLO · ctrl+g editor · main ❯ project
