tui/src/snapshots/codex_tui__app_server_render__tests__prompt_footer_omits_branch_separator_when_branch_unknown.snap
---
source: tui/src/app_server_render.rs
assertion_line: 8350
expression: render_prompt_footer_line_for_branch(None)
---
  ctrl+g editor · project
