tui/src/snapshots/codex_tui__app_server_render__tests__prompt_selection_view_hides_composer_and_prompt_footer_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---

  Select Syntax Theme
  Move up/down to live preview themes

  Type to filter themes...
› base16 (current)
  catppuccin-latte

  Press enter to confirm or esc to go back
