tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_elicitation_request.snap
---
source: tui/src/app_server_render.rs
expression: lines_to_plain_text(&cell.display_lines(width))
---
• Elicitation requested (mcp-server)
  └ Mode: url
    Message: Please log in.
    URL: https://example.com/auth
