tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_esc_interrupt_flow_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---







› test prompt


■ Conversation interrupted - tell the model what to do differently.
