tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_flushes_viewed_image_cells_on_turn_complete_in_minimal.snap
---
source: tui/src/app_server_render.rs
expression: rendered
---
• Viewed Image
  └ /tmp/slock_ui_05_invite_human_modal.png
    /tmp/slock_ui_06_edit_channel_modal.png
