tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_guardian_assessment.snap
---
source: tui/src/app_server_render.rs
expression: lines_to_plain_text(&cell.display_lines(width))
---
• Guardian assessment
  └ Status: Approved
    Risk score: 15
    Risk level: Low
    Rationale: Looks safe.
