tui/src/snapshots/codex_tui__app_server_render__tests__round_renderer_hook_completed.snap
---
source: tui/src/app_server_render.rs
expression: lines_to_plain_text(&cell.display_lines(width))
---
SessionStart hook (completed)
  warning: fallback value used
  feedback: consider adding more logging
  hook context: exported CODEX_HOME
  error: failed to warm cache
  stop: hook requested stop
